--- a/sveltekit-app/package.json
+++ b/sveltekit-app/package.json
@@ -16,29 +16,30 @@
   "devDependencies": {
     "@internationalized/date": "^3.9.0",
     "@lucide/svelte": "^0.542.0",
-    "@sveltejs/adapter-static": "3.0.4",
-    "@sveltejs/kit": "2.5.26",
+    "@sveltejs/adapter-static": "3.0.9",
+    "@sveltejs/kit": "2.37.0",
+    "@sveltejs/vite-plugin-svelte": "^6.1.3",
     "@tailwindcss/vite": "^4.1.12",
-    "bits-ui": "^2.9.4",
-    "layerchart": "^2.0.0-next.27",
+    "bits-ui": "^2.9.5",
+    "layerchart": "^2.0.0-next.37",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.5",
     "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^1.0.0",
+    "tailwind-variants": "^3.1.0",
     "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.6.2",
-    "vite": "^5.4.6"
+    "vite": "^7.1.4"
   },
   "dependencies": {
     "clsx": "^2.1.1",
     "csstype": "^3.1.3",
     "d3-scale": "^4.0.2",
-    "lucide-svelte": "^0.468.0"
+    "lucide-svelte": "^0.542.0"
   }
 }
